Mon Feb 02 2004 18:42:05 GMT
	
	* timer.c - wrong #if around include

Fri Jan 30 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* several files: Small changes for msdev compiler

Thu Jan 29 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c, gtkprefs.c: 3d quick draw-last options added

Wed Jan 28 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c: 3d quick draw-chequer target help added

Tue Jan 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c, gtkprefs.c: Some more 3d quick draw code

Mon Jan 26 19:24:34 2004  Joern Thyssen  <jth@gnubg.org>

	NetBSD compilation fixes by Adrian Bunk.

	* gnubg.c (real_main): HAVE_NL_INFO does not
	necessarily imply HAVE_LANGINFO_CODESET
	* sound.c: include sys/types.h before sys/audioio.h to
	define u_int.

Mon Jan 26 07:31:03 2004  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* htmlimages.c [!HAVE_LIBPNG] (CommandExportHTMLImages): Argument
	synch with HAVE_LIBPNG version.

Wed Jan 21 21:17:12 2004  Joern Thyssen  <jth@gnubg.org>

	* bearoff.c (GetDistCompressed): fix stupid stupid stupid bug. 
	(reported by several users)

Tue Jan 20 00:22:21 CET 2004  Joern Thyssen  <jth@gnubg.org>

	Prerelease 0.14.1

	* configure.in: bump to 0.14.1-devel

Tue Jan 20 00:02:30 CET 2004  Joern Thyssen  <jth@gnubg.org>

	* bearoff.c (GetDistCompressed): add sanity check to detect
	corrupted bearoff files.
	(inspired by bug #7296 by Rod Roark)

Mon Jan 19 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* timer.c timecontrol.c: Small timing changes

Mon Jan 19 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkboard.c, gtkchequer.c, gtkgame.c, gtkgame.h,
	gtkprefs.c, gtktoolbar.c: More 3d quick draw option stuff

Fri Jan 16 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* set.c, render.c, play.c, renderprefs.c, gtkprefs.c, gtkoptions.c,
	gtkgame.c, gtkboard.c: 3d quick draw option

Fri Jan 16 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
